# parallel-algorithms

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs  bfs.rs  quick_sort.rs
src/: lib.rs  parallel.rs  sequential.rs  test_utils.rs
src/bfs/: mod.rs  parallel.rs  sequential.rs  test_utils.rs
src/quick_sort/: parallel.rs  sequential.rs
