[package]
name = "parallel-algorithms"
version = "0.1.0"
authors = ["Simon Naumov <daretoodefy@gmail.com>"]
edition = "2018"

[dependencies]
rayon = "1.5.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
criterion-table = "0.4.2"
rand = "0.8.5"

[[bench]]
name = "quick_sort"
harness = false

[[bench]]
name = "bfs"
harness = false
